--- a/apps/store/public/locales/en/common.json
+++ b/apps/store/public/locales/en/common.json
@@ -22,7 +22,7 @@
   "FOREVER_PAGE_FOOTER_TEXT": "This is an exclusive site only intended for invited individuals. If you currently are not in possession of a code please do continue to our [[regular website.]]",
   "FOREVER_PAGE_INPUT_TEXT": "Enter code",
   "GENERAL_ERROR_DIALOG_TITLE": "Sorry...",
-  "GET_PRICE_LINK": "See you price",
+  "GET_PRICE_LINK": "See your price",
   "GLOBAL_BANNER_CAMPAIGN": "Your discount is added to cart",
   "HOME_PAGE_LINK_LABEL": "Home page",
   "LANGUAGE_LABEL_da": "Danish",
