Car cancellation: simplify logic when linking to BankSignering

--- a/apps/store/public/locales/en/common.json
+++ b/apps/store/public/locales/en/common.json
@@ -18,6 +18,7 @@
   "DIALOG_CLOSE": "Close",
   "DOWNLOAD_ASSET": "Download",
   "ERROR_DIALOG_CLOSE": "Close",
+  "FLOW_ACTIVATION_BUTTON": "Press here to begin",
   "FOREVER_PAGE_BTN_LABEL": "Next",
   "FOREVER_PAGE_FOOTER_TEXT": "This is an exclusive site only intended for invited individuals. If you currently are not in possession of a code please do continue to our [[regular website.]]",
   "FOREVER_PAGE_INPUT_TEXT": "Enter code",
@@ -36,7 +37,6 @@
   "NAV_MENU_DIALOG_OPEN": "Menu",
   "PAYMENT_CONNECT_ERROR_LINK_EXPIRED": "Unfortunately, the link has already expired",
   "PAYMENT_CONNECT_FAILURE": "Could not connect direct debit",
-  "PAYMENT_CONNECT_IFRAME_LOAD_BUTTON": "Press here to begin",
   "PAYMENT_CONNECT_RETRY": "Try again",
   "PAYMENT_CONNECT_SUCCESS": "Success! You can close this page now :)",
   "PAYMENT_CONNECT_TITLE": "Connect direct debit",
