--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -17,6 +17,7 @@
   "DIALOG_CLOSE": "Stäng",
   "DOWNLOAD_ASSET": "Ladda ner",
   "ERROR_DIALOG_CLOSE": "Stäng",
+  "FLOW_ACTIVATION_BUTTON": "Tryck här för att börja",
   "FOREVER_PAGE_BTN_LABEL": "Nästa",
   "FOREVER_PAGE_FOOTER_TEXT": "Denna sida är avsedd för inbjudna personer. Om du inte har en kod kan du fortsätta till vår vanliga [[webbplats.]]",
   "FOREVER_PAGE_INPUT_TEXT": "Fyll i koden",
@@ -33,7 +34,6 @@
   "NAV_MENU_DIALOG_OPEN": "Meny",
   "PAYMENT_CONNECT_ERROR_LINK_EXPIRED": "Tyvärr är länken redan förbrukad",
   "PAYMENT_CONNECT_FAILURE": "Autogirokopplingen misslyckades tyvärr",
-  "PAYMENT_CONNECT_IFRAME_LOAD_BUTTON": "Tryck här för att börja",
   "PAYMENT_CONNECT_RETRY": "Försök igen",
   "PAYMENT_CONNECT_SUCCESS": "Autogiro kopplat! Du kan stänga sidan nu :)",
   "PAYMENT_CONNECT_TITLE": "Koppla autogiro",
