--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -34,12 +34,13 @@
   "NAV_MENU_DIALOG_OPEN": "Meny",
   "PAYMENT_CONNECT_ERROR_LINK_EXPIRED": "Tyvärr är länken redan förbrukad",
   "PAYMENT_CONNECT_FAILURE": "Autogirokopplingen misslyckades tyvärr",
+  "PAYMENT_CONNECT_IFRAME_LOAD_BUTTON": "Tryck här för att börja",
   "PAYMENT_CONNECT_RETRY": "Försök igen",
   "PAYMENT_CONNECT_SUCCESS": "Autogiro kopplat! Du kan stänga sidan nu :)",
   "PAYMENT_CONNECT_TITLE": "Koppla autogiro",
   "READ_MORE": "Läs mer",
   "SELECT_INSURANCE": "Välj försäkring",
-  "TRUSTPILOT_REVIEWS_COUNT": "Baserat på {{numberOfReviews}} recensioner på",
+  "TRUSTPILOT_REVIEWS_COUNT": "{{numberOfReviews}} recensioner på",
   "TRUSTPILOT_SCORE": "{{score}} av 5",
   "UNKNOWN_ERROR_MESSAGE": "Något gick fel, försök igen."
 }
