ShopBreakdown: update cart page layout

--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -56,7 +56,7 @@
   "QUICK_ADD_DISMISS": "No, thanks",
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Covers {{count}} person",
   "QUICK_ADD_HOUSEHOLD_SIZE_other": "Covers {{count}} people",
-  "RECOMMENDATIONS_HEADING": "Others also bought",
+  "RECOMMENDATIONS_HEADING": "Discover more insurances",
   "REMOVE_ENTRY_BUTTON": "Remove",
   "REMOVE_ENTRY_MODAL_CANCEL_BUTTON": "Cancel",
   "REMOVE_ENTRY_MODAL_CONFIRM_BUTTON": "Yes, remove",
