--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -56,7 +56,7 @@
   "QUICK_ADD_DISMISS": "Nej tack",
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Täcker {{count}} person",
   "QUICK_ADD_HOUSEHOLD_SIZE_other": "Täcker {{count}} personer",
-  "RECOMMENDATIONS_HEADING": "Andra har köpt",
+  "RECOMMENDATIONS_HEADING": "Upptäck fler försäkringar",
   "REMOVE_ENTRY_BUTTON": "Ta bort",
   "REMOVE_ENTRY_MODAL_CANCEL_BUTTON": "Avbryt",
   "REMOVE_ENTRY_MODAL_CONFIRM_BUTTON": "Ja, ta bort",
