--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -58,6 +58,8 @@
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Täcker {{count}} person",
   "QUICK_ADD_HOUSEHOLD_SIZE_other": "Täcker {{count}} personer",
   "RECOMMENDATIONS_HEADING": "Upptäck fler försäkringar",
+  "REMOVE_CONTRACT_MODAL_PROMPT_SUBTITLE": "Vill vi påminna om att teckna en annan försäkring i god tid innan din prova-på-försäkring hos Hedvig har löpt ut. Annars riskerar du att bilen blir oförsäkrad.",
+  "REMOVE_CONTRACT_MODAL_PROMPT_TITLE": "Är du säker på att du vill ta bort försäkringen?",
   "REMOVE_ENTRY_BUTTON": "Ta bort",
   "REMOVE_ENTRY_MODAL_CANCEL_BUTTON": "Avbryt",
   "REMOVE_ENTRY_MODAL_CONFIRM_BUTTON": "Ja, ta bort",
