feat(carDealership): added global banner

--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -14,7 +14,7 @@
   "CHECKOUT_ADD_DISCOUNT_BUTTON": "Lägg till",
   "CHECKOUT_BUTTON": "Fortsätt till kassan",
   "CHECKOUT_PRICE_TOTAL": "Totalt",
-  "CONNECT_PAYMENT_BANNER": "Koppla din betalning innan {dueDate} för att försäkringen ska gälla",
+  "CONNECT_PAYMENT_BANNER": "Teckna före {{dueDate}} för att fortsätta vara försäkrad",
   "DATA_TABLE_ANCILLARY_AREA_LABEL": "Biyta",
   "DATA_TABLE_BREEDS_LABEL": "Ras(er)",
   "DATA_TABLE_CAT_GENDER_VALUE_FEMALE": "Hona",
@@ -60,6 +60,7 @@
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Täcker {{count}} person",
   "QUICK_ADD_HOUSEHOLD_SIZE_other": "Täcker {{count}} personer",
   "RECOMMENDATIONS_HEADING": "Upptäck fler försäkringar",
+  "REMAIN_INSURED_BANNER": "Koppla din betalning innan {{dueDate}} för att försäkringen ska gälla",
   "REMOVE_CAR_TRIAL_EXTENSION_BUTTON": "Nej, tack",
   "REMOVE_CONTRACT_MODAL_PROMPT_SUBTITLE": "Tänk på att du och din bil blir oförsäkrade efter att ditt starterbjudande har löpt ut. Trafikförsäkring är obligatoriskt enligt lag för att du ska få köra bilen.",
   "REMOVE_CONTRACT_MODAL_PROMPT_TITLE": "Är du säker på att du vill ta bort försäkringen?",
