--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -14,7 +14,7 @@
   "CHECKOUT_ADD_DISCOUNT_BUTTON": "Add",
   "CHECKOUT_BUTTON": "Go to checkout",
   "CHECKOUT_PRICE_TOTAL": "Total",
-  "CONNECT_PAYMENT_BANNER": "Connect payment before {dueDate} for activate the insurance",
+  "CONNECT_PAYMENT_BANNER": "Sign before {{dueDate}} to remain insured",
   "DATA_TABLE_ANCILLARY_AREA_LABEL": "Ancillary area",
   "DATA_TABLE_BREEDS_LABEL": "Breed(s)",
   "DATA_TABLE_CAT_GENDER_VALUE_FEMALE": "Female",
@@ -60,6 +60,7 @@
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Covers {{count}} person",
   "QUICK_ADD_HOUSEHOLD_SIZE_other": "Covers {{count}} people",
   "RECOMMENDATIONS_HEADING": "Discover more insurances",
+  "REMAIN_INSURED_BANNER": "Connect payment before {{dueDate}} for activate the insurance",
   "REMOVE_CAR_TRIAL_EXTENSION_BUTTON": "No, thanks",
   "REMOVE_CONTRACT_MODAL_PROMPT_SUBTITLE": "We would like to remind you to sign another insurance in good time before your trial period with Hedvig has expired. Otherwise, you risk that your car will become uninsured.",
   "REMOVE_CONTRACT_MODAL_PROMPT_TITLE": "Are you sure you want to remove the insurance?",
