ci: update translations from Lokalise

--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -39,7 +39,7 @@
   "DATA_TABLE_YEAR_OF_CONSTRUCTION_LABEL": "Year of construction",
   "DATA_TABLE_ZIP_CODE_LABEL": "Postal code",
   "DETAILS_SHEET_DISMISS_BUTTON": "Done",
-  "DISCOUNT_DURATION_EXPLANATION_one": "For {{count}} month, then {{monthlyPrice}}",
+  "DISCOUNT_DURATION_EXPLANATION_one": "for {{count}} month, then {{monthlyPrice}}",
   "DISCOUNT_DURATION_EXPLANATION_other": "for {{count}} months, then {{monthlyPrice}}",
   "DISCOUNT_PRICE_AFTER_EXPIRATION": "Then you pay {{amount}}",
   "DISCOUNT_STATE_FREE_MONTHS_one": "Free for {{count}} month",
@@ -48,6 +48,7 @@
   "DISCOUNT_STATE_MONTHLY_PERCENTAGE_one": "{{percentage}}% discount for {{count}} month",
   "DISCOUNT_STATE_MONTHLY_PERCENTAGE_other": "{{percentage}}% discount for {{count}} months",
   "DOCUMENTS": "Documents",
+  "EDIT_CAR_TRIAL_EXTENSION_BUTTON": "Edit",
   "EDIT_CONFIRMATION_MODAL_CANCEL": "Cancel",
   "EDIT_CONFIRMATION_MODAL_CONTINUE": "Continue",
   "EDIT_CONFIRMATION_MODAL_PROMPT": "You need to calculate a new price when you edit your information.",
@@ -58,7 +59,8 @@
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Covers {{count}} person",
   "QUICK_ADD_HOUSEHOLD_SIZE_other": "Covers {{count}} people",
   "RECOMMENDATIONS_HEADING": "Discover more insurances",
-  "REMOVE_CONTRACT_MODAL_PROMPT_SUBTITLE": "We would like to remind you to take out another insurance in good time before your trial insurance with Hedvig has expired. Otherwise, you risk the car becoming uninsured.",
+  "REMOVE_CAR_TRIAL_EXTENSION_BUTTON": "No, thanks",
+  "REMOVE_CONTRACT_MODAL_PROMPT_SUBTITLE": "We would like to remind you to sign another insurance in good time before your trial period with Hedvig has expired. Otherwise, you risk that your car will become uninsured.",
   "REMOVE_CONTRACT_MODAL_PROMPT_TITLE": "Are you sure you want to remove the insurance?",
   "REMOVE_ENTRY_BUTTON": "Remove",
   "REMOVE_ENTRY_MODAL_CANCEL_BUTTON": "Cancel",
