--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -39,7 +39,7 @@
   "DATA_TABLE_YEAR_OF_CONSTRUCTION_LABEL": "Byggår",
   "DATA_TABLE_ZIP_CODE_LABEL": "Postkod",
   "DETAILS_SHEET_DISMISS_BUTTON": "Klar",
-  "DISCOUNT_DURATION_EXPLANATION_one": "I {{count}} månad, sedan {{monthlyPrice}}",
+  "DISCOUNT_DURATION_EXPLANATION_one": "i {{count}} månad, sedan {{monthlyPrice}}",
   "DISCOUNT_DURATION_EXPLANATION_other": "i {{count}} månader, sedan {{monthlyPrice}}",
   "DISCOUNT_PRICE_AFTER_EXPIRATION": "Därefter {{amount}}",
   "DISCOUNT_STATE_FREE_MONTHS_one": "Gratis i {{count}} månad",
@@ -48,6 +48,7 @@
   "DISCOUNT_STATE_MONTHLY_PERCENTAGE_one": "{{percentage}}% rabatt i {{count}} månad",
   "DISCOUNT_STATE_MONTHLY_PERCENTAGE_other": "{{percentage}}% rabatt i {{count}} månader",
   "DOCUMENTS": "Dokument",
+  "EDIT_CAR_TRIAL_EXTENSION_BUTTON": "Ändra",
   "EDIT_CONFIRMATION_MODAL_CANCEL": "Avbryt",
   "EDIT_CONFIRMATION_MODAL_CONTINUE": "Fortsätt",
   "EDIT_CONFIRMATION_MODAL_PROMPT": "Du behöver göra en ny prisberäkning för att ändra dina uppgifter.",
@@ -58,7 +59,8 @@
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Täcker {{count}} person",
   "QUICK_ADD_HOUSEHOLD_SIZE_other": "Täcker {{count}} personer",
   "RECOMMENDATIONS_HEADING": "Upptäck fler försäkringar",
-  "REMOVE_CONTRACT_MODAL_PROMPT_SUBTITLE": "Vill vi påminna om att teckna en annan försäkring i god tid innan din prova-på-försäkring hos Hedvig har löpt ut. Annars riskerar du att bilen blir oförsäkrad.",
+  "REMOVE_CAR_TRIAL_EXTENSION_BUTTON": "Nej, tack",
+  "REMOVE_CONTRACT_MODAL_PROMPT_SUBTITLE": "Tänk på att du och din bil blir oförsäkrade efter att ditt starterbjudande har löpt ut. Trafikförsäkring är obligatoriskt enligt lag för att du ska få köra bilen.",
   "REMOVE_CONTRACT_MODAL_PROMPT_TITLE": "Är du säker på att du vill ta bort försäkringen?",
   "REMOVE_ENTRY_BUTTON": "Ta bort",
   "REMOVE_ENTRY_MODAL_CANCEL_BUTTON": "Avbryt",
