--- a/apps/store/public/locales/en/checkout.json
+++ b/apps/store/public/locales/en/checkout.json
@@ -23,7 +23,7 @@
   "FORM_LAST_NAME_LABEL": "Last name",
   "MANYPETS_COMPARISON_HEADER": "Switch to Hedvig and keep your cover.",
   "PAYMENT_HEADER_HELP_LINK": "Help",
-  "PAYMENT_TRUSTLY_FOOTNOTE": "Safe payments with Trustly.",
+  "PAYMENT_TRUSTLY_FOOTNOTE": "Safe payments with Trustly. This payment method will also be used for other insurances you sign with Hedvig.",
   "PAYMENT_TRUSTLY_MESSAGE": "Connect direct debit. Payments happen monthly on the 27th.",
   "PAYMENT_TRUSTLY_SUCCESS_MESSAGE": "Direct debit connected",
   "SAS_BONUS_NUMBER_INPUT_LABEL": "Number",
