--- a/apps/store/public/locales/sv-se/carDealership.json
+++ b/apps/store/public/locales/sv-se/carDealership.json
@@ -1,9 +1,11 @@
 {
   "ATTENTION_TOAST_CONTENT": "Tänk på att du är oförsäkrad från {{date}}",
+  "CONNECT_PAYMENT_BANNER": "Teckna före {{dueDate}} för att fortsätta vara försäkrad",
   "CONNECT_PAYMENT_BUTTON": "Koppla betalning",
   "EDIT_CAR_TRIAL_EXTENSION_BUTTON": "Ändra",
   "EXTENSION_HEADING": "Förläng din försäkring",
   "INFO_TOAST_CONTENT": "Ingen bindningstid. Avsluta när du vill i [[Hedvig-appen]].",
+  "REMAIN_INSURED_BANNER": "Koppla din betalning innan {{dueDate}} för att försäkringen ska gälla",
   "REMOVE_EXTENSION_BUTTON": "Nej, tack",
   "REMOVE_EXTENSION_CONFIRM_BUTTON": "Ja, ta bort",
   "REMOVE_EXTENSION_MODAL_CANCEL_BUTTON": "Avbryt",
