--- a/apps/store/public/locales/en/carDealership.json
+++ b/apps/store/public/locales/en/carDealership.json
@@ -7,13 +7,13 @@
   "INFO_TOAST_CONTENT": "No binding time. Cancel anytime in the [[Hedvig-app]].",
   "REMAIN_INSURED_BANNER": "Connect payment before {{dueDate}} for activate the insurance",
   "REMOVE_EXTENSION_BUTTON": "No, thanks",
-  "REMOVE_EXTENSION_CONFIRM_BUTTON": "Yes, remove",
+  "REMOVE_EXTENSION_CONFIRM_BUTTON": "Yes, go ahead",
   "REMOVE_EXTENSION_MODAL_CANCEL_BUTTON": "Cancel",
   "REMOVE_EXTENSION_MODAL_PROMPT_SUBTITLE": "We would like to remind you to sign another insurance in good time before your trial period with Hedvig has expired. Otherwise, you risk that your car will become uninsured.",
   "REMOVE_EXTENSION_MODAL_PROMPT_TITLE": "Are you sure you want to remove the insurance?",
   "SIGN_AND_PAY_BUTTON": "Sign and pay",
   "SIGN_BUTTON": "Extend insurance",
-  "TRIAL_COST_EXPLANATION": "to {{date}} then {{amount}}",
+  "TRIAL_COST_EXPLANATION": "discounted for 60 days",
   "TRIAL_HEADING": "Starter offer",
   "TRIAL_TERMINATION_DATE_MESSAGE": "Expires {{date}}",
   "TRIAL_TERMINATION_DATE_TOOLTIP": "You need to sign a new contract to continue your insurance.",
