--- a/apps/store/public/locales/sv-se/carDealership.json
+++ b/apps/store/public/locales/sv-se/carDealership.json
@@ -7,13 +7,13 @@
   "INFO_TOAST_CONTENT": "Ingen bindningstid. Avsluta när du vill i [[Hedvig-appen]].",
   "REMAIN_INSURED_BANNER": "Koppla din betalning innan {{dueDate}} för att försäkringen ska gälla",
   "REMOVE_EXTENSION_BUTTON": "Nej, tack",
-  "REMOVE_EXTENSION_CONFIRM_BUTTON": "Ja, ta bort",
+  "REMOVE_EXTENSION_CONFIRM_BUTTON": "Ja, fortsätt",
   "REMOVE_EXTENSION_MODAL_CANCEL_BUTTON": "Avbryt",
   "REMOVE_EXTENSION_MODAL_PROMPT_SUBTITLE": "Tänk på att du och din bil blir oförsäkrade efter att ditt starterbjudande har löpt ut. Trafikförsäkring är obligatoriskt enligt lag för att du ska få köra bilen.",
   "REMOVE_EXTENSION_MODAL_PROMPT_TITLE": "Är du säker på att du vill ta bort försäkringen?",
   "SIGN_AND_PAY_BUTTON": "Signera och betala",
   "SIGN_BUTTON": "Förläng försäkring",
-  "TRIAL_COST_EXPLANATION": "till {{date}} sedan {{amount}}",
+  "TRIAL_COST_EXPLANATION": "rabatterat pris i 60 dagar",
   "TRIAL_HEADING": "Starterbjudande",
   "TRIAL_TERMINATION_DATE_MESSAGE": "Löper ut {{date}}",
   "TRIAL_TERMINATION_DATE_TOOLTIP": "Du måste teckna ett nytt avtal för att förlänga din försäkring.",
