Car dealership: translate edit buttons

--- a/apps/store/public/locales/sv-se/carDealership.json
+++ b/apps/store/public/locales/sv-se/carDealership.json
@@ -2,6 +2,8 @@
   "CONNECT_PAYMENT_BANNER": "Teckna före {{dueDate}} för att fortsätta vara försäkrad",
   "CONNECT_PAYMENT_BUTTON": "Koppla betalning",
   "EDIT_CAR_TRIAL_EXTENSION_BUTTON": "Ändra",
+  "EDIT_OFFER_CANCEL": "Avbryt",
+  "EDIT_OFFER_SAVE": "Spara",
   "INFO_TOAST_CONTENT": "Ingen bindningstid. Avsluta när du vill i [[Hedvig-appen]].",
   "PAY_WITHOUT_EXTENSION_DIALOG_CANCEL": "Avbryt",
   "PAY_WITHOUT_EXTENSION_DIALOG_CONFIRM": "Ja, fortsätt",
@@ -10,6 +12,8 @@
   "REMAIN_INSURED_BANNER": "Koppla din betalning innan {{dueDate}} för att försäkringen ska gälla",
   "SIGN_AND_PAY_BUTTON": "Signera och betala",
   "SIGN_BUTTON": "Förläng försäkring",
+  "TOGGLE_EXTENSION_DESCRIPTION": "Passa på att förlänga din bilförsäkring direkt, så du fortsätter vara försäkrad. Tänk på att du och din bil blir oförsäkrade efter att de 60 dagarna har löpt ut.",
+  "TOGGLE_EXTENSION_LABEL": "Förläng efter 60 dagar",
   "TRIAL_COST_EXPLANATION": "rabatterat pris i 60 dagar",
   "TRIAL_HEADING": "Starterbjudande",
   "TRIAL_TERMINATION_DATE_MESSAGE": "Löper ut {{date}}",
