--- a/apps/store/public/locales/en/carDealership.json
+++ b/apps/store/public/locales/en/carDealership.json
@@ -2,6 +2,8 @@
   "CONNECT_PAYMENT_BANNER": "Sign before {{dueDate}} to remain insured",
   "CONNECT_PAYMENT_BUTTON": "Connect payment",
   "EDIT_CAR_TRIAL_EXTENSION_BUTTON": "Edit",
+  "EDIT_OFFER_CANCEL": "Cancel",
+  "EDIT_OFFER_SAVE": "Save",
   "INFO_TOAST_CONTENT": "No binding time. Cancel anytime in the [[Hedvig-app]].",
   "PAY_WITHOUT_EXTENSION_DIALOG_CANCEL": "Cancel",
   "PAY_WITHOUT_EXTENSION_DIALOG_CONFIRM": "Yes, go ahead",
@@ -10,6 +12,8 @@
   "REMAIN_INSURED_BANNER": "Connect payment before {{dueDate}} for activate the insurance",
   "SIGN_AND_PAY_BUTTON": "Sign and pay",
   "SIGN_BUTTON": "Extend insurance",
+  "TOGGLE_EXTENSION_DESCRIPTION": "Passa på att förlänga din bilförsäkring direkt, så du fortsätter vara försäkrad. Tänk på att du och din bil blir oförsäkrade efter att de 60 dagarna har löpt ut.",
+  "TOGGLE_EXTENSION_LABEL": "Extend after 60 days",
   "TRIAL_COST_EXPLANATION": "discounted for 60 days",
   "TRIAL_HEADING": "Starter offer",
   "TRIAL_TERMINATION_DATE_MESSAGE": "Expires {{date}}",
