--- a/apps/store/public/locales/en/memberArea.json
+++ b/apps/store/public/locales/en/memberArea.json
@@ -1,4 +1,9 @@
 {
+  "INSURANCE_DETAILS_CERTIFICATE_BUTTON": "Insurance certificate",
+  "INSURANCE_DETAILS_TAB_COVERAGE": "Coverage",
+  "INSURANCE_DETAILS_TAB_DOCUMENTS": "Documents",
+  "INSURANCE_DETAILS_TAB_OVERVIEW": "Overview",
+  "INSURANCE_SECTION_TITLE": "Your insurances",
   "MENU_ITEM_LABEL_CLAIM": "How to make a claim",
   "MENU_ITEM_LABEL_INSURANCE": "Your insurances",
   "MENU_ITEM_LABEL_PAYMENT": "Payment"
