--- a/apps/store/public/locales/sv-se/memberArea.json
+++ b/apps/store/public/locales/sv-se/memberArea.json
@@ -1,4 +1,9 @@
 {
+  "INSURANCE_DETAILS_CERTIFICATE_BUTTON": "Försäkringsbrev",
+  "INSURANCE_DETAILS_TAB_COVERAGE": "Skydd",
+  "INSURANCE_DETAILS_TAB_DOCUMENTS": "Dokument",
+  "INSURANCE_DETAILS_TAB_OVERVIEW": "Överblick",
+  "INSURANCE_SECTION_TITLE": "Dina försäkringar",
   "MENU_ITEM_LABEL_CLAIM": "Hur du anmäler en skada",
   "MENU_ITEM_LABEL_INSURANCE": "Dina försäkringar",
   "MENU_ITEM_LABEL_PAYMENT": "Betalning"
