--- a/apps/store/public/locales/sv-se/carDealership.json
+++ b/apps/store/public/locales/sv-se/carDealership.json
@@ -1,6 +1,7 @@
 {
   "CONNECT_PAYMENT_BANNER": "Teckna före {{dueDate}} för att fortsätta vara försäkrad",
   "CONNECT_PAYMENT_BUTTON": "Koppla betalning",
+  "CONTRACT_CARD_BADGE": "60 dagar",
   "EDIT_CAR_TRIAL_EXTENSION_BUTTON": "Ändra",
   "EDIT_OFFER_CANCEL": "Avbryt",
   "EDIT_OFFER_SAVE": "Spara",
@@ -17,6 +18,5 @@
   "TRIAL_COST_EXPLANATION": "rabatterat pris i 60 dagar",
   "TRIAL_TERMINATION_DATE_MESSAGE": "Löper ut {{date}}",
   "TRIAL_TERMINATION_DATE_TOOLTIP": "Du måste teckna ett nytt avtal för att förlänga din försäkring.",
-  "TRIAL_TITLE": "Bilförsäkring 60 dagar",
   "USP_TEXT": "Ingen bindningstid"
 }
