--- a/apps/store/public/locales/sv-se/purchase-form.json
+++ b/apps/store/public/locales/sv-se/purchase-form.json
@@ -121,6 +121,7 @@
   "SECTION_TITLE_YOUR_DOG": "Din hund",
   "SECTION_TITLE_YOUR_FAMILY": "Antal personer",
   "SECTION_TITLE_YOUR_HOME": "Ditt hem",
+  "SECTION_TOOLTIP_YOUR_CAR": "Du behöver stå som ägare på bilen för att teckna en försäkring.",
   "SELF_SWICHER_MESSAGE": "Hedvig aktiveras {{date}}. Om din nuvarande försäkring går ut inom en vecka behöver du säga upp den själv.",
   "SE_CAR_FULL_DESCRIPTION": "Allt i trafik och halv, plus vagnskada",
   "SE_CAR_HALF_DESCRIPTION": "Stöld & inbrott, brand, glasskador, m.m.",
