--- a/apps/store/public/locales/sv-se/memberArea.json
+++ b/apps/store/public/locales/sv-se/memberArea.json
@@ -6,5 +6,10 @@
   "INSURANCE_SECTION_TITLE": "Dina försäkringar",
   "MENU_ITEM_LABEL_CLAIM": "Hur du anmäler en skada",
   "MENU_ITEM_LABEL_INSURANCE": "Dina försäkringar",
-  "MENU_ITEM_LABEL_PAYMENT": "Betalning"
+  "MENU_ITEM_LABEL_PAYMENT": "Betalning",
+  "PAYMENTS_CONNECTION_TITLE": "Kopplad betalning",
+  "PAYMENTS_FREE_UNTIL": "Gratis till och med",
+  "PAYMENTS_MONTLY_COST": "Månadskostnad",
+  "PAYMENTS_PAYMENT_CONNECTED": "Betalning kopplad",
+  "PAYMENTS_PAYMENT_NOT_CONNECTED": "Ingen betalning kopplad"
 }
