fix(ProductItem): show product item association according to design

--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -51,6 +51,7 @@
   "EDIT_CONFIRMATION_MODAL_CANCEL": "Cancel",
   "EDIT_CONFIRMATION_MODAL_CONTINUE": "Continue",
   "EDIT_CONFIRMATION_MODAL_PROMPT": "You need to calculate a new price when you edit your information.",
+  "EXPOSURE_LABEL": "Valid for",
   "GO_TO_STORE_BUTTON": "Browse our insurances",
   "QUICK_ADD_BUTTON": "Add",
   "QUICK_ADD_DISMISS": "No, thanks",
