--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -51,6 +51,7 @@
   "EDIT_CONFIRMATION_MODAL_CANCEL": "Avbryt",
   "EDIT_CONFIRMATION_MODAL_CONTINUE": "Fortsätt",
   "EDIT_CONFIRMATION_MODAL_PROMPT": "Du behöver göra en ny prisberäkning för att ändra dina uppgifter.",
+  "EXPOSURE_LABEL": "Giltlig för",
   "GO_TO_STORE_BUTTON": "Se våra försäkringar",
   "QUICK_ADD_BUTTON": "Lägg till",
   "QUICK_ADD_DISMISS": "Nej tack",
