styles(carDealership): updated due design changes

--- a/apps/store/public/locales/en/carDealership.json
+++ b/apps/store/public/locales/en/carDealership.json
@@ -5,18 +5,19 @@
   "EDIT_CAR_TRIAL_EXTENSION_BUTTON": "Edit",
   "EDIT_OFFER_CANCEL": "Cancel",
   "EDIT_OFFER_SAVE": "Save",
+  "INITIAL_OFFER_HEADING": "Your initial offer",
   "NOTICE_TOAST_CONTENT": "Don't want to take this offer? [[Cancel it here]].",
   "PAY_WITHOUT_EXTENSION_DIALOG_CANCEL": "Cancel",
   "PAY_WITHOUT_EXTENSION_DIALOG_CONFIRM": "Yes, go ahead",
-  "PAY_WITHOUT_EXTENSION_DIALOG_SUBTITLE": "We would like to remind you to sign another insurance in good time before your trial period with Hedvig has expired. Otherwise, you risk that your car will become uninsured.",
-  "PAY_WITHOUT_EXTENSION_DIALOG_TITLE": "Do you want to continue without extending?",
+  "PAY_WITHOUT_EXTENSION_DIALOG_SUBTITLE": "Keep in mind that you and your car are uninsured after the intial offer expires. And remember that you need traffic insurance to be allowed to drive the car.",
+  "PAY_WITHOUT_EXTENSION_DIALOG_TITLE": "Do you want to continue without renewing your insurance?",
   "REMAIN_INSURED_BANNER": "Connect payment before {{dueDate}} for activate the insurance",
   "SIGN_AND_PAY_BUTTON": "Sign and pay",
   "SIGN_BUTTON": "Extend insurance",
   "TOGGLE_EXTENSION_DESCRIPTION": "Passa på att förlänga din bilförsäkring direkt, så du fortsätter vara försäkrad. Tänk på att du och din bil blir oförsäkrade efter att de 60 dagarna har löpt ut.",
   "TOGGLE_EXTENSION_LABEL": "Extend after 60 days",
-  "TRIAL_COST_EXPLANATION": "discounted for 60 days",
-  "TRIAL_TERMINATION_DATE_MESSAGE": "Expires {{date}}",
+  "TRIAL_COST_EXPLANATION": "discounted price until {{date}}",
+  "TRIAL_TERMINATION_DATE_MESSAGE": "Valid until {{date}}",
   "TRIAL_TERMINATION_DATE_TOOLTIP": "You need to sign a new contract to continue your insurance.",
   "USP_TEXT": "No binding time"
 }
