GEN-1396 | Implement Widget payment page

--- a/apps/store/public/locales/en/checkout.json
+++ b/apps/store/public/locales/en/checkout.json
@@ -25,7 +25,9 @@
   "PAYMENT_HEADER_HELP_LINK": "Help",
   "PAYMENT_TRUSTLY_FOOTNOTE": "Safe payments with Trustly. This payment method will also be used for other insurances you sign with Hedvig.",
   "PAYMENT_TRUSTLY_MESSAGE": "Connect direct debit. Payments happen monthly on the 27th.",
+  "PAYMENT_TRUSTLY_SUBTITLE": "Payments happen monthly on the 27th",
   "PAYMENT_TRUSTLY_SUCCESS_MESSAGE": "Direct debit connected",
+  "PAYMENT_TRUSTLY_TITLE": "Connect direct debit",
   "SAS_BONUS_NUMBER_INPUT_LABEL": "Number",
   "SAS_BONUS_NUMBER_SAVED": "Your SAS EuroBonus is now connected",
   "SAS_BONUS_NUMBER_SAVE_BUTTON": "Save",
