--- a/apps/store/public/locales/sv-se/checkout.json
+++ b/apps/store/public/locales/sv-se/checkout.json
@@ -25,7 +25,9 @@
   "PAYMENT_HEADER_HELP_LINK": "Hjälp",
   "PAYMENT_TRUSTLY_FOOTNOTE": "Säker betalning med Trustly. Denna betalningsmetod kommer också användas för andra försäkringar du tecknar hos Hedvig.",
   "PAYMENT_TRUSTLY_MESSAGE": "Koppla autogiro. Betalning dras månadsvis, den 27:e.",
+  "PAYMENT_TRUSTLY_SUBTITLE": "Pengarna kommer dras den 27:e varje månad",
   "PAYMENT_TRUSTLY_SUCCESS_MESSAGE": "Autogiro kopplat",
+  "PAYMENT_TRUSTLY_TITLE": "Koppla autogiro",
   "SAS_BONUS_NUMBER_INPUT_LABEL": "Nummer",
   "SAS_BONUS_NUMBER_SAVED": "Ditt SAS EuroBonus är nu kopplat",
   "SAS_BONUS_NUMBER_SAVE_BUTTON": "Spara",
