--- a/apps/store/public/locales/sv-se/checkout.json
+++ b/apps/store/public/locales/sv-se/checkout.json
@@ -46,5 +46,8 @@
   "SWITCHING_ASSISTANT_NEXT_LINK": "Gå vidare",
   "SWITCHING_ASSISTANT_SKIP_LINK": "Påminn mig senare",
   "SWITCHING_ASSISTANT_SUPPORT_LINK": "Hjälp",
-  "SWITCHING_ASSISTANT_TITLE": "Säg upp din gamla bilförsäkring"
+  "SWITCHING_ASSISTANT_TITLE": "Säg upp din gamla bilförsäkring",
+  "USP_TEXT": "Ingen bindningstid",
+  "WIDGET_CHECKOUT_PAGE_HEADING": "Ditt erbjudande",
+  "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Välj startdatum och signera nedan"
 }
