--- a/apps/store/public/locales/sv-se/checkout.json
+++ b/apps/store/public/locales/sv-se/checkout.json
@@ -49,5 +49,8 @@
   "SWITCHING_ASSISTANT_TITLE": "Säg upp din gamla bilförsäkring",
   "USP_TEXT": "Ingen bindningstid",
   "WIDGET_CHECKOUT_PAGE_HEADING": "Ditt erbjudande",
-  "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Välj startdatum och signera nedan"
+  "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Välj startdatum och signera nedan",
+  "WIDGET_PROGRESS_PAY": "Betala",
+  "WIDGET_PROGRESS_SIGN": "Signera",
+  "WIDGET_PROGRESS_YOUR_INFO": "Din info"
 }
