--- a/apps/store/public/locales/en/checkout.json
+++ b/apps/store/public/locales/en/checkout.json
@@ -25,9 +25,7 @@
   "PAYMENT_HEADER_HELP_LINK": "Help",
   "PAYMENT_TRUSTLY_FOOTNOTE": "Safe payments with Trustly. This payment method will also be used for other insurances you sign with Hedvig.",
   "PAYMENT_TRUSTLY_MESSAGE": "Connect direct debit. Payments happen monthly on the 27th.",
-  "PAYMENT_TRUSTLY_SUBTITLE": "Payments happen monthly on the 27th",
   "PAYMENT_TRUSTLY_SUCCESS_MESSAGE": "Direct debit connected",
-  "PAYMENT_TRUSTLY_TITLE": "Connect direct debit",
   "SAS_BONUS_NUMBER_INPUT_LABEL": "Number",
   "SAS_BONUS_NUMBER_SAVED": "Your SAS EuroBonus is now connected",
   "SAS_BONUS_NUMBER_SAVE_BUTTON": "Save",
@@ -46,11 +44,5 @@
   "SWITCHING_ASSISTANT_NEXT_LINK": "Continue",
   "SWITCHING_ASSISTANT_SKIP_LINK": "Remind me later",
   "SWITCHING_ASSISTANT_SUPPORT_LINK": "Help",
-  "SWITCHING_ASSISTANT_TITLE": "Cancel your old car insurance",
-  "USP_TEXT": "No binding time",
-  "WIDGET_CHECKOUT_PAGE_HEADING": "Your offer",
-  "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Choose a start date and sign below",
-  "WIDGET_PROGRESS_PAY": "Pay",
-  "WIDGET_PROGRESS_SIGN": "Sign",
-  "WIDGET_PROGRESS_YOUR_INFO": "Your info"
+  "SWITCHING_ASSISTANT_TITLE": "Cancel your old car insurance"
 }
