--- a/apps/store/public/locales/en/widget.json
+++ b/apps/store/public/locales/en/widget.json
@@ -1,6 +1,8 @@
 {
   "PAYMENT_TRUSTLY_SUBTITLE": "Payments happen monthly on the 27th",
   "PAYMENT_TRUSTLY_TITLE": "Connect direct debit",
+  "SELECT_CONTINUE_BUTTON": "Continue",
+  "SELECT_PAGE_TITLE": "Select your insurance",
   "USP_TEXT": "No binding time",
   "WIDGET_CHECKOUT_PAGE_HEADING": "Your offer",
   "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Choose a start date and sign below",
