Widget | Add page title for calculate price page

--- a/apps/store/public/locales/en/widget.json
+++ b/apps/store/public/locales/en/widget.json
@@ -1,4 +1,5 @@
 {
+  "CALCULATE_PRICE_PAGE_TITLE": "Calculate your price",
   "PAYMENT_TRUSTLY_SUBTITLE": "Payments happen monthly on the 27th",
   "PAYMENT_TRUSTLY_TITLE": "Connect direct debit",
   "SELECT_CONTINUE_BUTTON": "Continue",
