--- a/apps/store/public/locales/sv-se/widget.json
+++ b/apps/store/public/locales/sv-se/widget.json
@@ -1,4 +1,5 @@
 {
+  "CALCULATE_PRICE_PAGE_TITLE": "Beräkna ditt pris",
   "PAYMENT_TRUSTLY_SUBTITLE": "Pengarna kommer dras den 27:e varje månad",
   "PAYMENT_TRUSTLY_TITLE": "Koppla autogiro",
   "SELECT_CONTINUE_BUTTON": "Fortsätt",
