GEN-1514 | Fix UI on Widget Select Product Page

--- a/apps/store/public/locales/en/carDealership.json
+++ b/apps/store/public/locales/en/carDealership.json
@@ -10,12 +10,12 @@
   "NOTICE_TOAST_CONTENT": "Don't want to take this offer? [[Cancel it here]].",
   "PAY_WITHOUT_EXTENSION_DIALOG_CANCEL": "Cancel",
   "PAY_WITHOUT_EXTENSION_DIALOG_CONFIRM": "Yes, go ahead",
-  "PAY_WITHOUT_EXTENSION_DIALOG_SUBTITLE": "Keep in mind that you and your car are uninsured after the intial offer expires. And remember that you need traffic insurance to be allowed to drive the car.",
+  "PAY_WITHOUT_EXTENSION_DIALOG_SUBTITLE": "Keep in mind that you and your car are uninsured after the initial offer expires. And remember that you need at least traffic insurance to be allowed to drive the car.",
   "PAY_WITHOUT_EXTENSION_DIALOG_TITLE": "Do you want to continue without renewing your insurance?",
   "REMAIN_INSURED_BANNER": "Sign before {{dueDate}} to remain insured",
   "SIGN_AND_PAY_BUTTON": "Sign and pay",
   "SIGN_BUTTON": "Extend insurance",
-  "TOGGLE_EXTENSION_DESCRIPTION": "Passa på att förlänga din bilförsäkring direkt, så du fortsätter vara försäkrad. Tänk på att du och din bil blir oförsäkrade efter att de 60 dagarna har löpt ut.",
+  "TOGGLE_EXTENSION_DESCRIPTION": "Take the opportunity to extend your car insurance right away. Keep in mind that you and your car will be uninsured after the 60 days have expired.",
   "TOGGLE_EXTENSION_LABEL": "Extend after 60 days",
   "TRIAL_COST_EXPLANATION": "discounted price until {{date}}",
   "TRIAL_TERMINATION_DATE_MESSAGE": "Valid until {{date}}",
