--- a/apps/store/public/locales/sv-se/carDealership.json
+++ b/apps/store/public/locales/sv-se/carDealership.json
@@ -10,7 +10,7 @@
   "NOTICE_TOAST_CONTENT": "Vill du inte ta del av starterbjudandet? [[Avsluta erbjudandet här]].",
   "PAY_WITHOUT_EXTENSION_DIALOG_CANCEL": "Avbryt",
   "PAY_WITHOUT_EXTENSION_DIALOG_CONFIRM": "Ja, fortsätt",
-  "PAY_WITHOUT_EXTENSION_DIALOG_SUBTITLE": "Tänk på att du och din bil är oförsäkrade efter att starterbjudandet löpt ut. Och kom ihåg att du behöver en trafikförsäkring för att du ska få köra bilen.",
+  "PAY_WITHOUT_EXTENSION_DIALOG_SUBTITLE": "Tänk på att du och din bil är oförsäkrade efter att starterbjudandet löpt ut. Och kom ihåg att du behöver ha minst en trafikförsäkring för att få köra bilen.",
   "PAY_WITHOUT_EXTENSION_DIALOG_TITLE": "Vill du fortsätta utan att förlänga din försäkring?",
   "REMAIN_INSURED_BANNER": "Teckna före {{dueDate}} för att fortsätta vara försäkrad",
   "SIGN_AND_PAY_BUTTON": "Signera och betala",
