--- a/apps/store/public/locales/sv-se/widget.json
+++ b/apps/store/public/locales/sv-se/widget.json
@@ -3,7 +3,7 @@
   "PAYMENT_TRUSTLY_SUBTITLE": "Pengarna kommer dras den 27:e varje månad",
   "PAYMENT_TRUSTLY_TITLE": "Koppla autogiro",
   "SELECT_CONTINUE_BUTTON": "Fortsätt",
-  "SELECT_PAGE_TITLE": "Välj din försäkring",
+  "SELECT_PAGE_TITLE": "Välj försäkring och beräkna ditt pris",
   "USP_TEXT": "Ingen bindningstid",
   "WIDGET_CHECKOUT_PAGE_HEADING": "Ditt erbjudande",
   "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Välj startdatum och signera nedan",
