Add support for line breaks in Lokalise

--- a/apps/store/public/locales/sv-se/widget.json
+++ b/apps/store/public/locales/sv-se/widget.json
@@ -6,7 +6,7 @@
   "SELECT_PAGE_TITLE": "Välj försäkring och beräkna ditt pris",
   "USP_TEXT": "Ingen bindningstid",
   "WIDGET_CHECKOUT_PAGE_HEADING": "Ditt erbjudande",
-  "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Välj startdatum och signera nedan",
+  "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Välj startdatum och \nsignera nedan",
   "WIDGET_PROGRESS_PAY": "Betala",
   "WIDGET_PROGRESS_SIGN": "Signera",
   "WIDGET_PROGRESS_YOUR_INFO": "Din info"
