--- a/apps/store/public/locales/en/widget.json
+++ b/apps/store/public/locales/en/widget.json
@@ -6,7 +6,7 @@
   "SELECT_PAGE_TITLE": "Select insurance and calculate your price",
   "USP_TEXT": "No binding time",
   "WIDGET_CHECKOUT_PAGE_HEADING": "Your offer",
-  "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Choose a start date and sign below",
+  "WIDGET_CHECKOUT_PAGE_SUBHEADING": "Choose a start date \nand sign below",
   "WIDGET_PROGRESS_PAY": "Pay",
   "WIDGET_PROGRESS_SIGN": "Sign",
   "WIDGET_PROGRESS_YOUR_INFO": "Your info"
