Update buttons and price breakdown for QuickAdd component

--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -1,5 +1,6 @@
 {
   "ACCIDENT_OFFER_DESCRIPTION": "Up to 1 million SEK in compensation for injuries and lost working ability in the event of an accident. No deductible.",
+  "ACCIDENT_OFFER_PRICE_LABEL": "Your offer:",
   "ADD_TO_CART_BUTTON_LABEL": "Add to cart",
   "BACK_BUTTON": "Back",
   "CAMPAIGN_CODE_HEADING": "Add discount code",
