--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -1,5 +1,6 @@
 {
   "ACCIDENT_OFFER_DESCRIPTION": "Få upp till 1 miljon kronor i ersättning för skador och förlorad arbetsförmåga vid olycka. Ingen självrisk.",
+  "ACCIDENT_OFFER_PRICE_LABEL": "Ditt erbjudande:",
   "ADD_TO_CART_BUTTON_LABEL": "Lägg i varukorgen",
   "BACK_BUTTON": "Tillbaka",
   "CAMPAIGN_CODE_HEADING": "Lägg till rabattkod",
