--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -42,5 +42,6 @@
   "SELECT_INSURANCE": "Välj försäkring",
   "TRUSTPILOT_REVIEWS_COUNT": "{{numberOfReviews}} recensioner på",
   "TRUSTPILOT_SCORE": "{{score}} av 5",
-  "UNKNOWN_ERROR_MESSAGE": "Något gick fel, försök igen."
+  "UNKNOWN_ERROR_MESSAGE": "Något gick fel, försök igen.",
+  "VERIFIED_CUSTOMER_LABEL": "Verifierad kund"
 }
