--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -38,6 +38,8 @@
   "PAYMENT_CONNECT_RETRY": "Försök igen",
   "PAYMENT_CONNECT_SUCCESS": "Autogiro kopplat! Du kan stänga sidan nu :)",
   "PAYMENT_CONNECT_TITLE": "Koppla autogiro",
+  "RATING_REVIEWS_COUNT_LABEL": "Baserat på {{reviewsCount}} omdömen",
+  "RATING_SCORE_LABEL": "{{score}} av {{maxScore}}",
   "READ_MORE": "Läs mer",
   "SELECT_INSURANCE": "Välj försäkring",
   "TRUSTPILOT_REVIEWS_COUNT": "{{numberOfReviews}} recensioner på",
