--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -59,6 +59,7 @@
   "QUICK_ADD_EDIT": "Edit",
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Covers {{count}} person",
   "QUICK_ADD_HOUSEHOLD_SIZE_other": "Covers {{count}} people",
+  "QUICK_ADD_TITLE": "Home + {{product}}",
   "RECOMMENDATIONS_HEADING": "Discover more insurances",
   "REMOVE_ENTRY_BUTTON": "Remove",
   "REMOVE_ENTRY_MODAL_CANCEL_BUTTON": "Cancel",
