--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -1,5 +1,6 @@
 {
-  "ACCIDENT_OFFER_DESCRIPTION": "Upgrade your coverage with an Accident insurance. Get compensated for dental, scars and much more.",
+  "ACCIDENT_OFFER_DESCRIPTION": "Up to 1 million SEK in compensation for injuries and lost working ability in the event of an accident. No deductible.",
+  "ACCIDENT_OFFER_DESCRIPTION_BUNDLE": "Upgrade your coverage with an Accident insurance. Get compensated for dental, scars and much more.",
   "ACCIDENT_OFFER_PRICE_LABEL": "Your offer:",
   "ACCIDENT_OFFER_USP_1": "Extra coverage for injuries and accidents",
   "ACCIDENT_OFFER_USP_2": "Up to 1 million SEK in compensation",
@@ -57,7 +58,8 @@
   "EDIT_CONFIRMATION_MODAL_PROMPT": "You need to calculate a new price when you edit your information.",
   "EXPOSURE_LABEL": "Valid for",
   "GO_TO_STORE_BUTTON": "Browse our insurances",
-  "QUICK_ADD_BUTTON": "Upgrade",
+  "QUICK_ADD_BUTTON": "Add",
+  "QUICK_ADD_BUTTON_BUNDLE": "Upgrade",
   "QUICK_ADD_DISMISS": "No, thanks",
   "QUICK_ADD_EDIT": "Edit",
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Covers {{count}} person",
