--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -1,5 +1,6 @@
 {
-  "ACCIDENT_OFFER_DESCRIPTION": "Uppgradera ditt skydd med en Olycksfallsförsäkring. Få ersättning för olyckor, tandskador, ärr och mycket mer. ",
+  "ACCIDENT_OFFER_DESCRIPTION": "Få upp till 1 miljon kronor i ersättning för skador och förlorad arbetsförmåga vid olycka. Ingen självrisk.",
+  "ACCIDENT_OFFER_DESCRIPTION_BUNDLE": "Uppgradera ditt skydd med en Olycksfallsförsäkring. Få ersättning för olyckor, tandskador, ärr och mycket mer. ",
   "ACCIDENT_OFFER_PRICE_LABEL": "Ditt erbjudande:",
   "ACCIDENT_OFFER_USP_1": "Extra skydd vid skador och olyckor",
   "ACCIDENT_OFFER_USP_2": "Upp till 1 000 000kr i ersättning",
@@ -57,7 +58,8 @@
   "EDIT_CONFIRMATION_MODAL_PROMPT": "Du behöver göra en ny prisberäkning för att ändra dina uppgifter.",
   "EXPOSURE_LABEL": "Giltlig för",
   "GO_TO_STORE_BUTTON": "Se våra försäkringar",
-  "QUICK_ADD_BUTTON": "Uppgradera",
+  "QUICK_ADD_BUTTON": "Lägg till",
+  "QUICK_ADD_BUTTON_BUNDLE": "Uppgradera",
   "QUICK_ADD_DISMISS": "Nej tack",
   "QUICK_ADD_EDIT": "Ändra",
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Täcker {{count}} person",
