--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -64,6 +64,7 @@
   "QUICK_ADD_EDIT": "Edit",
   "QUICK_ADD_HOUSEHOLD_SIZE_one": "Covers {{count}} person",
   "QUICK_ADD_HOUSEHOLD_SIZE_other": "Covers {{count}} people",
+  "QUICK_ADD_INCLUDED_DIALOG_BUTTON": "See what's included",
   "QUICK_ADD_TITLE": "Home + {{product}}",
   "RECOMMENDATIONS_HEADING": "Discover more insurances",
   "REMOVE_ENTRY_BUTTON": "Remove",
