--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -46,5 +46,6 @@
   "TRUSTPILOT_REVIEWS_DISCLAIMER": "Vi uppmanar våra medlemmar att tycka till om oss på Trustpilot. Plattformen är öppen för alla och det finns inget system för att säkerställa att enbart Hedvigs medlemmar lämnar omdömen.",
   "TRUSTPILOT_SCORE": "{{score}} av 5",
   "UNKNOWN_ERROR_MESSAGE": "Något gick fel, försök igen.",
-  "VERIFIED_CUSTOMER_LABEL": "Verifierad kund"
+  "VERIFIED_CUSTOMER_LABEL": "Verifierad kund",
+  "VIEW_REVIEWS_LABEL": "Visa omdömen"
 }
