feat(TrustpilotBlock): add disclaimer Tooltip

--- a/apps/store/public/locales/en/common.json
+++ b/apps/store/public/locales/en/common.json
@@ -45,7 +45,8 @@
   "RATING_SCORE_LABEL": "{{score}} of {{maxScore}}",
   "READ_MORE": "Read more",
   "SELECT_INSURANCE": "Select insurance",
-  "TRUSTPILOT_REVIEWS_COUNT": "{{numberOfReviews}} reviews on",
+  "TRUSTPILOT_REVIEWS_COUNT": "Based on {{numberOfReviews}} reviews",
+  "TRUSTPILOT_REVIEWS_DISCLAIMER": "We encourage our members to write reviews about us on Trustpilot. The platform is open to everyone and there is no system to verify that only Hedvig's members leave reviews.",
   "TRUSTPILOT_SCORE": "{{score}} of 5",
   "UNKNOWN_ERROR_MESSAGE": "Something went wrong, please try again.",
   "VERIFIED_CUSTOMER_LABEL": "Verified customer"
