ci: update translations from Lokalise

--- a/apps/store/public/locales/en/cart.json
+++ b/apps/store/public/locales/en/cart.json
@@ -58,6 +58,7 @@
   "EDIT_CONFIRMATION_MODAL_PROMPT": "You need to calculate a new price when you edit your information.",
   "EXPOSURE_LABEL": "Valid for",
   "GO_TO_STORE_BUTTON": "Browse our insurances",
+  "QUICK_ADD_BADGE_LABEL": "Popular",
   "QUICK_ADD_BUTTON": "Add",
   "QUICK_ADD_BUTTON_BUNDLE": "Upgrade",
   "QUICK_ADD_DISMISS": "No, thanks",
