--- a/apps/store/public/locales/en/purchase-form.json
+++ b/apps/store/public/locales/en/purchase-form.json
@@ -109,7 +109,7 @@
   "OPEN_PRICE_CALCULATOR_BUTTON": "See your price",
   "PRESENT_OFFER_EDIT_BUTTON": "Edit your info",
   "PRICE_CALCULATOR_SECTION_EDIT_BUTTON": "Edit",
-  "PRICE_MATCH_BUBBLE_INCOMPARABLE_SUBTITLE": "We could unfortunately not match your current price",
+  "PRICE_MATCH_BUBBLE_INCOMPARABLE_SUBTITLE": "We could not match your current price",
   "PRICE_MATCH_BUBBLE_INCOMPARABLE_TITLE": "You pay {{amount}} at {{company}}",
   "PRICE_MATCH_BUBBLE_SUCCESS_SUBTITLE": "compared to {{company}}",
   "PRICE_MATCH_BUBBLE_SUCCESS_TITLE": "You save {{amount}}",
