--- a/apps/store/public/locales/sv-se/cart.json
+++ b/apps/store/public/locales/sv-se/cart.json
@@ -58,6 +58,7 @@
   "EDIT_CONFIRMATION_MODAL_PROMPT": "Du behöver göra en ny prisberäkning för att ändra dina uppgifter.",
   "EXPOSURE_LABEL": "Giltlig för",
   "GO_TO_STORE_BUTTON": "Se våra försäkringar",
+  "QUICK_ADD_BADGE_LABEL": "Populärt",
   "QUICK_ADD_BUTTON": "Lägg till",
   "QUICK_ADD_BUTTON_BUNDLE": "Uppgradera",
   "QUICK_ADD_DISMISS": "Nej tack",
