feat(ProductReviews): added trustpilot reviews

--- a/apps/store/public/locales/en/common.json
+++ b/apps/store/public/locales/en/common.json
@@ -41,12 +41,14 @@
   "PAYMENT_CONNECT_RETRY": "Try again",
   "PAYMENT_CONNECT_SUCCESS": "Success! You can close this page now :)",
   "PAYMENT_CONNECT_TITLE": "Connect direct debit",
+  "PRODUCT_REVIEWS_TAB_LABEL": "Reviews ({{score}})",
   "RATING_REVIEWS_COUNT_LABEL": "Based on {{reviewsCount}} reviews",
   "RATING_SCORE_LABEL": "{{score}} of {{maxScore}}",
   "READ_MORE": "Read more",
   "SELECT_INSURANCE": "Select insurance",
   "TRUSTPILOT_REVIEWS_COUNT": "Based on {{numberOfReviews}} reviews",
   "TRUSTPILOT_REVIEWS_DISCLAIMER": "We encourage our members to write reviews about us on Trustpilot. The platform is open to everyone and there is no system to verify that only Hedvig's members leave reviews.",
+  "TRUSTPILOT_REVIEWS_TAB_LABEL": "Trustpilot ({{score}})",
   "TRUSTPILOT_SCORE": "{{score}} of 5",
   "UNKNOWN_ERROR_MESSAGE": "Something went wrong, please try again.",
   "VERIFIED_CUSTOMER_LABEL": "Verified customer",
