--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -38,12 +38,14 @@
   "PAYMENT_CONNECT_RETRY": "Försök igen",
   "PAYMENT_CONNECT_SUCCESS": "Autogiro kopplat! Du kan stänga sidan nu :)",
   "PAYMENT_CONNECT_TITLE": "Koppla autogiro",
+  "PRODUCT_REVIEWS_TAB_LABEL": "Omdömen ({{score}})",
   "RATING_REVIEWS_COUNT_LABEL": "Baserat på {{reviewsCount}} omdömen",
   "RATING_SCORE_LABEL": "{{score}} av {{maxScore}}",
   "READ_MORE": "Läs mer",
   "SELECT_INSURANCE": "Välj försäkring",
   "TRUSTPILOT_REVIEWS_COUNT": "Baserat på {{numberOfReviews}} omdömen",
-  "TRUSTPILOT_REVIEWS_DISCLAIMER": "Vi uppmanar våra medlemmar att tycka till om oss på Trustpilot. Plattformen är öppen för alla och har inget system för att säkerställa att enbart Hedvigs medlemmar lämnar omdömen.",
+  "TRUSTPILOT_REVIEWS_DISCLAIMER": "Vi uppmanar våra medlemmar att tycka till om oss på Trustpilot. Plattformen är öppen för alla och kan inte säkerställa att enbart Hedvigs medlemmar lämnar omdömen.",
+  "TRUSTPILOT_REVIEWS_TAB_LABEL": "Trustpilot ({{score}})",
   "TRUSTPILOT_SCORE": "{{score}} av 5",
   "UNKNOWN_ERROR_MESSAGE": "Något gick fel, försök igen.",
   "VERIFIED_CUSTOMER_LABEL": "Verifierad kund",
