refact(ProductAverageRatingBlock): redesign

--- a/apps/store/public/locales/en/common.json
+++ b/apps/store/public/locales/en/common.json
@@ -42,9 +42,12 @@
   "PAYMENT_CONNECT_SUCCESS": "Success! You can close this page now :)",
   "PAYMENT_CONNECT_TITLE": "Connect direct debit",
   "PRODUCT_REVIEWS_TAB_LABEL": "Reviews ({{score}})",
-  "RATING_REVIEWS_COUNT_LABEL": "Based on {{reviewsCount}} reviews",
   "RATING_SCORE_LABEL": "{{score}} of {{maxScore}}",
   "READ_MORE": "Read more",
+  "REVIEWS_COUNT_BASED_ON_LABEL_one": "Based on {{count}} review",
+  "REVIEWS_COUNT_BASED_ON_LABEL_other": "Based on {{count}} reviews",
+  "REVIEWS_COUNT_LABEL_one": "{{count}} review",
+  "REVIEWS_COUNT_LABEL_other": "{{count}} reviews",
   "SELECT_INSURANCE": "Select insurance",
   "TRUSTPILOT_REVIEWS_COUNT": "Based on {{numberOfReviews}} reviews",
   "TRUSTPILOT_REVIEWS_DISCLAIMER": "We encourage our members to write reviews about us on Trustpilot. The platform is open to everyone and there is no system to verify that only Hedvig's members leave reviews.",
