--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -39,9 +39,12 @@
   "PAYMENT_CONNECT_SUCCESS": "Autogiro kopplat! Du kan stänga sidan nu :)",
   "PAYMENT_CONNECT_TITLE": "Koppla autogiro",
   "PRODUCT_REVIEWS_TAB_LABEL": "Omdömen ({{score}})",
-  "RATING_REVIEWS_COUNT_LABEL": "Baserat på {{reviewsCount}} omdömen",
   "RATING_SCORE_LABEL": "{{score}} av {{maxScore}}",
   "READ_MORE": "Läs mer",
+  "REVIEWS_COUNT_BASED_ON_LABEL_one": "Baserat på {{count}} omdöme",
+  "REVIEWS_COUNT_BASED_ON_LABEL_other": "Baserat på {{count}} omdömen",
+  "REVIEWS_COUNT_LABEL_one": "{{count}} omdöme",
+  "REVIEWS_COUNT_LABEL_other": "{{count}} omdömen",
   "SELECT_INSURANCE": "Välj försäkring",
   "TRUSTPILOT_REVIEWS_COUNT": "Baserat på {{numberOfReviews}} omdömen",
   "TRUSTPILOT_REVIEWS_DISCLAIMER": "Vi uppmanar våra medlemmar att tycka till om oss på Trustpilot. Plattformen är öppen för alla och kan inte säkerställa att enbart Hedvigs medlemmar lämnar omdömen.",
