styles(ProductReviews): design tweaks

--- a/apps/store/public/locales/en/common.json
+++ b/apps/store/public/locales/en/common.json
@@ -30,11 +30,13 @@
   "LANGUAGE_LABEL_en": "English",
   "LANGUAGE_LABEL_no": "Norwegian",
   "LANGUAGE_LABEL_sv": "Swedish",
+  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Shows latest reviews with comments",
   "LOGIN_BUTTON_TEXT": "Log in",
   "MONTHLY_PRICE": "{{displayAmount}}/mo.",
   "NAVIGATION_STORE_LINK": "Browse all insurances",
   "NAV_MENU_DIALOG_CLOSE": "Close",
   "NAV_MENU_DIALOG_OPEN": "Menu",
+  "NO_REVIEWS_LABEL": "No comments have been left",
   "PAYMENT_CONNECT_ERROR_LINK_EXPIRED": "Unfortunately, the link has already expired",
   "PAYMENT_CONNECT_FAILURE": "Could not connect direct debit",
   "PAYMENT_CONNECT_IFRAME_LOAD_BUTTON": "Press here to begin",
