--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -27,11 +27,13 @@
   "HOME_PAGE_LINK_LABEL": "Hemsidan",
   "LANGUAGE_LABEL_en": "English",
   "LANGUAGE_LABEL_sv": "Svenska",
+  "LATEST_REVIEWS_WITH_COMMENTS_LABEL": "Visar senaste recensioner med kommentarer",
   "LOGIN_BUTTON_TEXT": "Logga in",
   "MONTHLY_PRICE": "{{displayAmount}}/mån",
   "NAVIGATION_STORE_LINK": "Se alla försäkringar",
   "NAV_MENU_DIALOG_CLOSE": "Stäng",
   "NAV_MENU_DIALOG_OPEN": "Meny",
+  "NO_REVIEWS_LABEL": "Inga kommentarer har lämnats",
   "PAYMENT_CONNECT_ERROR_LINK_EXPIRED": "Tyvärr är länken redan förbrukad",
   "PAYMENT_CONNECT_FAILURE": "Autogirokopplingen misslyckades tyvärr",
   "PAYMENT_CONNECT_IFRAME_LOAD_BUTTON": "Tryck här för att börja",
