--- a/apps/store/public/locales/en/common.json
+++ b/apps/store/public/locales/en/common.json
@@ -43,6 +43,7 @@
   "PAYMENT_CONNECT_RETRY": "Try again",
   "PAYMENT_CONNECT_SUCCESS": "Success! You can close this page now :)",
   "PAYMENT_CONNECT_TITLE": "Connect direct debit",
+  "PRODUCT_REVIEWS_DISCLAIMER": "These reviews have been collected through invitation to members who have had a claim with Hedvig",
   "PRODUCT_REVIEWS_TAB_LABEL": "Reviews ({{score}})",
   "RATING_SCORE_LABEL": "{{score}} of {{maxScore}}",
   "READ_MORE": "Read more",
@@ -52,7 +53,7 @@
   "REVIEWS_COUNT_LABEL_other": "{{count}} reviews",
   "SELECT_INSURANCE": "Select insurance",
   "TRUSTPILOT_REVIEWS_COUNT": "Based on {{numberOfReviews}} reviews",
-  "TRUSTPILOT_REVIEWS_DISCLAIMER": "We encourage our members to write reviews about us on Trustpilot. The platform is open to everyone and there is no system to verify that only Hedvig's members leave reviews.",
+  "TRUSTPILOT_REVIEWS_DISCLAIMER": "We encourage our members to write reviews about us on Trustpilot. The platform is open to everyone and cannot verify that only Hedvig's members leave reviews.",
   "TRUSTPILOT_REVIEWS_TAB_LABEL": "Trustpilot ({{score}})",
   "TRUSTPILOT_SCORE": "{{score}} of 5",
   "UNKNOWN_ERROR_MESSAGE": "Something went wrong, please try again.",
