--- a/apps/store/public/locales/sv-se/common.json
+++ b/apps/store/public/locales/sv-se/common.json
@@ -48,6 +48,7 @@
   "REVIEWS_COUNT_BASED_ON_LABEL_other": "Baserat på {{count}} omdömen",
   "REVIEWS_COUNT_LABEL_one": "{{count}} omdöme",
   "REVIEWS_COUNT_LABEL_other": "{{count}} omdömen",
+  "REVIEW_COMMENTS_READ_MORE": "Läs mer",
   "SELECT_INSURANCE": "Välj försäkring",
   "TRUSTPILOT_REVIEWS_COUNT": "Baserat på {{numberOfReviews}} omdömen",
   "TRUSTPILOT_REVIEWS_DISCLAIMER": "Vi uppmanar våra medlemmar att tycka till om oss på Trustpilot. Plattformen är öppen för alla och kan inte säkerställa att enbart Hedvigs medlemmar lämnar omdömen.",
